--- a/units/unit2-dataIO.lyx
+++ b/units/unit2-dataIO.lyx
@@ -1392,11 +1392,7 @@ One lesson here is not to write a lot of your own code to do something that
 \emph on
 rvest
 \emph default
- package (you can also see usage of the now-unmaintained 
-\emph on
-xml
-\emph default
- package in the code file for this unit).
+ package.
 \end_layout
 
 \begin_layout Standard
@@ -2179,7 +2175,7 @@ More tools -> Developer tools
 
 \begin_inset CommandInset href
 LatexCommand href
-target "http://data.un.org/Handlers/DownloadHandler.ashx?DataFilter=itemCode:526;year:2003,2004,2005,2006,2007&DataMartId=FAO&Format=csv&c=2,3,4,5,6,7&s=countryName:asc,elementCode:asc,year:desc"
+target "http://data.un.org/Handlers/DownloadHandler.ashx?DataFilter=itemCode:526;year:2012,2013,2014,2015,2016,2017&DataMartId=FAO&Format=csv&c=2,4,5,6,7&s=countryName:asc,elementCode:asc,year:desc"
 
 \end_inset
 
