--- a/syllabus/syllabus.lyx
+++ b/syllabus/syllabus.lyx
@@ -798,7 +798,8 @@ Any mathematical derivations may be done by hand if you prefer that to writing
 Note: knitr is a tool that allows one to embed chunks of code within \SpecialChar LaTeX
  documents.
  It can also be used with the \SpecialChar LyX
- GUI front-end to Latex.
+ GUI front-end to \SpecialChar LaTeX
+.
  R Markdown is an extension to the Markdown markup language that allows
  one to embed R code within an HTML document.
  Please see the dynamics document tutorial on the SCF tutorials website;
